@@ -2,6 +2,8 @@
 
 	[task #5956 --- ``Automake'ify GNU Mach's code base'']
 
+	* Makefrag.am (include_mach_exec): Rename to `include_mach_eXec'.
+	
 	* Makefile.in: New file, generated by `autoreconf'.
 	* config.h.in: Likewise.
 	* configure: Updated file, generated by `autoreconf'.
